--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,23 +1,166 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  font-family: "Inter", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 10px auto;
+}
+
+h1 {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 40px;
 }
 
 .nav_flex {
   display: flex;
-  height: 200px;
-  box-sizing: border-box;
-  img {
-    height: 30px;
-    width: 30px;
+  height: 150px;
+  justify-content: space-between;
+  margin: auto;
+  background-color: white;
+  padding: 20px;
+  .nav_logo {
+    height: 150px;
   }
+  nav {
+    display: flex;
+    align-items: center;
+    gap: 50px;
+    color: black; 
+    img {
+      height: 30px;
+      width: 30px;
+      cursor: pointer;
+    }
+    a {
+      color: black;
+      text-decoration: none;
+      &:hover {
+        text-decoration: underline;
+        color: #ffbd80;
+        cursor: pointer;
+      }
+      &:active {
+        text-decoration: underline;
+        color: #b35600;
+        cursor: pointer;
+      }
+    }
+  }
+}
+
+.round {
+  border-radius: 50%;
+  width: 400px;
+  height: 400px;
+}
+.about {
+  background-color: #ffbd80;
+  padding: 20px;
+  margin: 20px auto;
+  display: flex;
+  flex-direction: row-reverse;
+  .about_txt {
+    margin: 30px 30px;
+  }
+  .about_img {
+    display: flex;
+    margin: 30px auto;
+  }
+}
+
+.center {
+  padding: 20px;
+  margin: 20px auto;
+}
+.filtres {
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+  margin-bottom: 30px;
+  p {
+    margin: 0;
+    padding: 5px 20px;
+    border-radius: 20px;
+    color: black;
+    &:hover {
+      background-color: #ffbd80;
+      color: white;
+      cursor: pointer;
+    }
+    &:active {
+      background-color: #b35600;
+      color: white;
+      cursor: pointer;
+    }
+  }
+}
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+  margin: 40px auto;
+  padding: 0 100px;
+}
+.card {
+  width: 100%;
+  height: 400px;
+  box-sizing: border-box;
+  position: relative;
+  cursor: pointer;
+  img {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+  }
+  p {
+    position: absolute;
+    bottom: 0;
+    left: 10px;
+    color: white;
+    z-index: 100;
+  }
+}
+.gradient {
+  background: linear-gradient(180deg,hsla(0,0%,100%,0),hsla(0,0%,100%,0),rgba(0,0,0,.6));
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+}
+.footer {
+  width: 100%;
+  height: 150px;
+  background-color: black;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  .footer_logo {
+    height: 150px;
+  }
+  .footer_contact {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 20px;
+    p {
+      margin: 0;
+    }
+    a {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 15px;
+      color: white;
+      text-decoration: none;
+    }
+    img {
+      max-height: 30px;
+      max-width: 30px;
+    }
+  }
+  
 }
