--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -114,11 +114,13 @@ h1 {
   gap: 10px;
   margin-bottom: 30px;
   flex-wrap: wrap;
-  p {
+  button {
     margin: 0;
     padding: 5px 20px;
     border-radius: 20px;
     color: black;
+    border: none;
+    background-color: transparent;
     &:hover {
       background-color: #ffbd80;
       color: white;
@@ -137,7 +139,7 @@ h1 {
   grid-template-columns: 1fr 1fr 1fr;
   gap: 10px;
   margin: 40px auto;
-  padding: 0 150px;
+  padding: 0 200px;
   @media screen and (max-width: 1024px) {
     grid-template-columns: 1fr 1fr;
 
