--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -23,15 +23,9 @@ h1 {
   gap: 20px;
   background-color: black;
   margin: auto;
-  @media screen and (max-width: 768px) {
-    height: 150px;
-  }
   .nav_logo {
     height: 100px;
     width: 100px;
-    @media screen and (max-width: 768px) {
-      height: 75px;
-    }
   }
   nav {
     display: flex;
@@ -63,20 +57,13 @@ h1 {
   }
 }
 
-.round {
-  width: 550px;
-  height: 550px;
-  @media screen and (max-width: 768px) {
-    width: 250px;
-    height: 250px;
-    margin: 10px auto;
-    display: flex;
-    justify-content: center;
-    border-radius: 50%;
-  }
+#about {
+  display: flex;
+  justify-content: space-between;
 }
 .about {
   background-color: #ffbd80;
+
   .about_extend {
     max-width: 1440px;
     height: 550px;
@@ -87,16 +74,75 @@ h1 {
       height: auto;
     }
   }
-  .about_txt {
-    margin: 30px 100px;
-    text-align: center;
-    img {
-      width: 75px;
+  .carousel-root {
+    width: 550px;
+    @media screen and (max-width: 1024px) {
+      width: 350px;
     }
-
     @media screen and (max-width: 768px) {
-      margin: 0 10px;
+      width: 100%;
+    }
+  }
+  .carousel {
+    width: 550px;
+    @media screen and (max-width: 768px) {
+      width: 100%;
+    }
+  }
+  .slider-wrapper {
+    height: 550px;
+    @media screen and (max-width: 768px) {
+      width: 100%;
+      height: 350px;
+    }
+    .slide {
+      height: 350px;
+      @media screen and (max-width: 768px) {
+        width: 100%;
+      }
+      img {
+        height: 550px;
+        width: 550px;
+        @media screen and (max-width: 1024px) {
+          width: 400px;
+        }
+        @media screen and (max-width: 768px) {
+          height: 350px;
+          width: 100%;
+        }
+      }
+    }
+  }
+  .thumbs-wrapper {
+    display: none;
+  }
+  .about_txt {
+    padding: 15px;
+    margin: auto;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    @media screen and (max-width: 1024px) {
       text-align: center;
+    }
+    @media screen and (max-width: 768px) {
+      text-align: center;
+    }
+    .round {
+      width: 200px;
+      border-radius: 50%;
+      @media screen and (max-width: 1024px) {
+        width: 150px;
+      }
+      @media screen and (max-width: 768px) {
+        width: 100px;
+        margin-top: 15px;
+      }
+    }
+    p{
+      margin: 0;
     }
   }
   @media screen and (max-width: 768px) {
@@ -140,6 +186,9 @@ h1 {
       cursor: pointer;
     }
   }
+  @media screen and (max-width: 1024px) {
+    margin: 15px;
+  }
   @media screen and (max-width: 768px) {
     margin: 0 15px;
   }
@@ -167,10 +216,12 @@ h1 {
   box-sizing: border-box;
   position: relative;
   cursor: pointer;
-  img {
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
+  div {
+    img {
+      width: 100%;
+      height: 400px;
+      border-radius: 10px;
+    }
   }
   p {
     position: absolute;
@@ -214,5 +265,39 @@ h1 {
       max-width: 30px;
     }
   }
-  
+}
+
+.error {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  padding: 20px 0;
+  justify-content: center;
+  align-items: center;
+  background-color: #ffbd80;
+  .error_404 {
+    font-size: 150px;
+    margin: 40px;
+  }
+  .error_txt {
+    font-size: 75px;
+    margin: 40px;
+  }
+  .error_link {
+    color: black;
+    text-decoration: none;
+    margin: 20px;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+}
+
+#react-modal-image-img {
+  max-width: 800px;
+  height: 100vh;
+  @media screen and (max-width: 768px) {
+    max-width: 45vh;
+    height: 70vh;
+  }
 }
