--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -63,10 +63,9 @@ h1 {
 }
 .about {
   background-color: #ffbd80;
-
   .about_extend {
     max-width: 1440px;
-    height: 550px;
+    height: 650px;
     display: flex;
     flex-direction: row-reverse;
     @media screen and (max-width: 768px) {
@@ -75,39 +74,40 @@ h1 {
     }
   }
   .carousel-root {
-    width: 550px;
+    width: 650px;
     @media screen and (max-width: 1024px) {
-      width: 350px;
+      width: 450px;
     }
     @media screen and (max-width: 768px) {
       width: 100%;
     }
   }
   .carousel {
-    width: 550px;
+    width: 650px;
     @media screen and (max-width: 768px) {
       width: 100%;
     }
   }
   .slider-wrapper {
-    height: 550px;
+    height: 650px;
     @media screen and (max-width: 768px) {
       width: 100%;
-      height: 350px;
+      height: 450px;
     }
     .slide {
-      height: 350px;
+      height: 650px;
       @media screen and (max-width: 768px) {
+        height: 450px;
         width: 100%;
       }
       img {
-        height: 550px;
-        width: 550px;
+        height: 650px;
+        width: 650px;
         @media screen and (max-width: 1024px) {
-          width: 400px;
+          width: 450px;
         }
         @media screen and (max-width: 768px) {
-          height: 350px;
+          height: 450px;
           width: 100%;
         }
       }
@@ -118,7 +118,7 @@ h1 {
   }
   .about_txt {
     padding: 15px;
-    margin: auto;
+    margin: 0 auto 0 100px;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -126,6 +126,7 @@ h1 {
     align-items: center;
     @media screen and (max-width: 1024px) {
       text-align: center;
+      margin-left: 0;
     }
     @media screen and (max-width: 768px) {
       text-align: center;
