--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -169,7 +169,7 @@ h1 {
   padding: 10px 0;
   border-radius: 10px;
   box-sizing: border-box;
-  max-width: 1000px;
+  max-width: 758px;
   button {
     margin: 0;
     padding: 5px 20px;
@@ -188,7 +188,8 @@ h1 {
     }
   }
   @media screen and (max-width: 1024px) {
-    margin: 15px;
+    margin: auto;
+    padding: 10px;
   }
   @media screen and (max-width: 768px) {
     margin: 0 15px;
