--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,6 +1,13 @@
+@import './utils/variables.scss';
+@import './pages/about.scss';
+@import './pages/gallery.scss';
+@import './components/header.scss';
+@import './components/modale.scss';
+@import './components/footer.scss';
+@import './components/error404.scss';
+
 * {
   font-family: 'Ysabeau SC', sans-serif;
-
 }
 
 body {
@@ -12,294 +19,4 @@ h1 {
   justify-content: center;
   padding: 20px 0 0;
   margin: 0 0 40px 0;
-}
-
-.nav_flex {
-  display: flex;
-  height: 200px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-  background-color: black;
-  margin: auto;
-  .nav_logo {
-    height: 100px;
-    width: 100px;
-  }
-  nav {
-    display: flex;
-    align-items: center;
-    gap: 50px;
-    @media screen and (max-width: 768px) {
-      text-transform : uppercase;
-      gap: 20px;
-    }
-    img {
-      height: 30px;
-      width: 30px;
-      cursor: pointer;
-    }
-    a {
-      color: white;
-      text-decoration: none;
-      &:hover {
-        text-decoration: underline;
-        color: #ffbd80;
-        cursor: pointer;
-      }
-      &:active {
-        text-decoration: underline;
-        color: #b35600;
-        cursor: pointer;
-      }
-    }
-  }
-}
-
-#about {
-  display: flex;
-  justify-content: space-between;
-}
-.about {
-  background-color: #ffbd80;
-  .about_extend {
-    max-width: 1440px;
-    height: 650px;
-    display: flex;
-    flex-direction: row-reverse;
-    @media screen and (max-width: 768px) {
-      flex-direction: column-reverse;
-      height: auto;
-    }
-  }
-  .carousel-root {
-    width: 650px;
-    @media screen and (max-width: 1024px) {
-      width: 450px;
-    }
-    @media screen and (max-width: 768px) {
-      width: 100%;
-    }
-  }
-  .carousel {
-    width: 650px;
-    @media screen and (max-width: 768px) {
-      width: 100%;
-    }
-  }
-  .slider-wrapper {
-    height: 650px;
-    @media screen and (max-width: 768px) {
-      width: 100%;
-      height: 450px;
-    }
-    .slide {
-      height: 650px;
-      @media screen and (max-width: 768px) {
-        height: 450px;
-        width: 100%;
-      }
-      img {
-        height: 650px;
-        width: 650px;
-        @media screen and (max-width: 1024px) {
-          width: 450px;
-        }
-        @media screen and (max-width: 768px) {
-          height: 450px;
-          width: 100%;
-        }
-      }
-    }
-  }
-  .thumbs-wrapper {
-    display: none;
-  }
-  .about_txt {
-    padding: 15px;
-    margin: 0 auto 0 100px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    @media screen and (max-width: 1024px) {
-      text-align: center;
-      margin-left: 0;
-    }
-    @media screen and (max-width: 768px) {
-      text-align: center;
-    }
-    .round {
-      width: 200px;
-      border-radius: 50%;
-      @media screen and (max-width: 1024px) {
-        width: 150px;
-      }
-      @media screen and (max-width: 768px) {
-        width: 100px;
-        margin-top: 15px;
-      }
-    }
-    p{
-      margin: 0;
-    }
-  }
-  @media screen and (max-width: 768px) {
-    flex-direction: column-reverse;
-  }
-}
-
-.center {
-  margin: auto;
-  background-color: #ffbd80;
-  .title_filters {
-    max-width: 1440px;
-    margin: auto;
-  }
-}
-.filtres {
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-  margin: 0 auto 30px;
-  flex-wrap: wrap;
-  background-color: white;
-  padding: 10px 0;
-  border-radius: 10px;
-  box-sizing: border-box;
-  max-width: 758px;
-  button {
-    margin: 0;
-    padding: 5px 20px;
-    border-radius: 20px;
-    color: black;
-    border: none;
-    background-color: transparent;
-    &:hover {
-      text-decoration: underline;
-      cursor: pointer;
-    }
-    &:focus {
-      background-color: #b35600;
-      color: white;
-      cursor: pointer;
-    }
-  }
-  @media screen and (max-width: 1024px) {
-    margin: auto;
-    padding: 10px;
-  }
-  @media screen and (max-width: 768px) {
-    margin: 0 15px;
-  }
-}
-.grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 10px;
-  margin: auto;
-  padding: 20px 100px;
-  box-sizing: border-box;
-  max-width: 1440px;
-  @media screen and (max-width: 1024px) {
-    grid-template-columns: 1fr 1fr;
-
-  }
-  @media screen and (max-width: 768px) {
-    grid-template-columns: 1fr;
-    padding: 15px;
-  }
-}
-.card {
-  width: 100%;
-  height: 400px;
-  box-sizing: border-box;
-  position: relative;
-  cursor: pointer;
-  div {
-    img {
-      width: 100%;
-      height: 400px;
-      border-radius: 10px;
-    }
-  }
-  p {
-    position: absolute;
-    bottom: 0;
-    left: 10px;
-    color: white;
-    z-index: 100;
-  }
-}
-.gradient {
-  background: linear-gradient(180deg,hsla(0,0%,100%,0),hsla(0,0%,100%,0),rgba(0,0,0,.6));
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  border-radius: 10px;
-}
-.footer {
-  width: 100%;
-  height: 100px;
-  background-color: black;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  .footer_logo {
-    height: 100px;
-  }
-  .footer_contact {
-    display: flex;
-    gap: 20px;
-    a {
-      display: flex;
-      align-items: center;
-      gap: 15px;
-      color: white;
-      text-decoration: none;
-    }
-    img {
-      max-height: 30px;
-      max-width: 30px;
-    }
-  }
-}
-
-.error {
-  display: flex;
-  flex-direction: column;
-  margin: auto;
-  padding: 20px 0;
-  justify-content: center;
-  align-items: center;
-  background-color: #ffbd80;
-  .error_404 {
-    font-size: 150px;
-    margin: 40px;
-  }
-  .error_txt {
-    font-size: 75px;
-    margin: 40px;
-  }
-  .error_link {
-    color: black;
-    text-decoration: none;
-    margin: 20px;
-    &:hover {
-      text-decoration: underline;
-    }
-  }
-}
-
-#react-modal-image-img {
-  max-width: 800px;
-  height: 100vh;
-  @media screen and (max-width: 768px) {
-    max-width: 45vh;
-    height: 70vh;
-  }
 }
